fix: audit backlog #8 — four pages that taught something false, and the harness that proves it
In every one of these the authored prose was fine and the interactive payload
was wrong — the CodeWalk note:/vars:, the scenario res:, the .intro card. That
is the layer the animation says out loud when attention is highest, and no gate
in the repo read it as code. Now one does.

The four pages
--------------
TypeScript (typescript-generic-inference-deep): merge("a", 42) showed a green
tick over a call that does not compile — it is now a red scenario ending in the
real TS2345. The union claim moved to a new fourth scenario, fromArray([1,"x"]),
which shows a union arriving from one already-union site; inference takes the
best common supertype and never invents a union across two sites. The
clamp/NoInfer walk had the with-NoInfer half backwards and is replaced by a
verified pick/pickSafe role example. A fifth false claim the audit never
reported went with them: identity(42) infers T = 42, the literal type; number
only appears once a let binding widens it.

Angular (10 files): one canonical timeline — experimental v18-19, renamed and
stable in v20.2, default in v21+ — checked against angular.dev rather than
against the site's own five disagreeing pages. Seven pages were still emitting
provideExperimentalZonelessChangeDetection, which v21 removed.

Java (java-concurrency-advanced): the StructuredTaskScope walk now says PREVIEW
in the code, in the step note and in a status: var, and carries the Java 21
Future<U> to Java 22+ Subtask<U> shape change that made the shown code not
compile on any single JDK.

SQL (sql-transactions): the CodeWalk gave the ANSI answer, unqualified, on a
page whose table and prose both give the PostgreSQL one. It now teaches the fork
— the standard PERMITS phantoms at REPEATABLE READ, Postgres implements that
level as snapshot isolation and prevents them, and that is conformant because
the standard only says which anomalies must NOT occur — and a note u